# AdvoDash

./: Procfile  README.md  pyproject.toml  requirements.txt  runtime.txt
accounts/: admin.py  backend.py  models.py  views.py
accounts/migrations/: 0002_rename_user_customuser.py  0003_rename_customuser_user.py
advodash/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
advodash/accounts/: admin.py  forms.py  models.py  urls.py  views.py
advodash/accounts/migrations/: 0001_initial.py  0003_rename_firm_name_position_position.py  0004_alter_user_options_remove_user_address_and_more.py
advodash/advodash/: settings.py  urls.py
advodash/advodash/templates/: base.html  nav.html
advodash/cases/: case_stage.csv  case_types.csv  courts.csv  forms.py  models.py  urls.py  views.py
advodash/cases/migrations/: 0002_rename_type_casestage_stage_rename_type_court_court.py  0004_alter_casestage_stage_alter_casetype_type_and_more.py
advodash/static/css/: layout.css
advodash/templates/: base_generic.html  layout.html
advodash/templates/registration/: login.html  (+1 more)
advodash_ostrich/accounts/: backends.py  forms.py  models.py  views.py
advodash_ostrich/advodash/: settings.py  urls.py
advodash_ostrich/cases/: admin.py  forms.py  models.py  urls.py  views.py
advodash_ostrich/templates/: layout.html
case/: apps.py  views.py
cases/: admin.py  models.py  urls.py  views.py
cases/migrations/: 0001_initial.py  0002_casestage_stage_casetype_type_court_court.py  0003_alter_cases_appearing_lawyer_alter_cases_title.py  0005_alter_casetype_type.py
static/css/: layout.css
(+20 files in other folders)
