[tool.poetry]
name = "advodash"
version = "0.1.0"
description = "E-Diary for Advocates"
authors = ["Anshrk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
